Refactor tests into table tests and add comments